# propweaver

./: CLAUDE.md  README.md  SECURITY_AUDIT.md  TODO.md  contract.json  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: AI_COLLABORATION.md  ARCHITECTURE.md  DESIGN_DECISIONS.md  README.md  RELEASE.md  WALKTHROUGH_WHYS.md  database_migrations.md
examples/: README.md  dependency_analysis.py  knowledge_graph.py  logging_demo.py  resource_monitoring.py  schema_inspection.py  social_network.py
src/propgraph/: api.py  core.py
src/propweaver/: __init__.py  api.py  core.py  exceptions.py  logger.py  logging_utils.py  query.py  storage.py
tests/: conftest.py  test_api_models.py  test_bulk_operations.py  test_crud_operations.py  test_edge_node_types.py  test_exceptions.py  test_integration.py  test_path_security.py  test_property_dict.py  test_propweaver.py  test_query_system.py  test_resource_stats.py
